<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/list_slidermenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layoutKm"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >




        <TextView
            android:id="@+id/kmText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/kmEdit"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/destinoText"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/destino"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/destinoEdit"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/nomeText"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/nomeEdit"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:layout_gravity="center_horizontal" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="Salvar"
            android:id="@+id/button2"
            android:layout_marginTop="43dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Blank"
            android:id="@+id/textView"
            android:gravity="center"
            />


    </LinearLayout>
            </ScrollView>

    </FrameLayout>
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#fffff9ec"/>
</android.support.v4.widget.DrawerLayout>
